# toolcrate

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.optimized  Dockerfile.test  FULL_CLI_TESTING_CHECKLIST.md  Makefile  PROJECT_CLEANUP_ANALYSIS.md  README.md  SETUP_README.md  SHAZAM_INTEGRATION_SUMMARY.md  WORKFLOW_SETUP_SUMMARY.md  alembic.ini  config_manager.py  configure_toolcrate.sh  create-pr.sh  docker-compose.dev.yml  docker-compose.standalone.yml  docker-compose.test.yml  docker-compose.yml  install.sh  install_global.sh  pr-description.md  pyproject.toml  pytest.ini  run_tests.sh  setup.py  setup.sh  tasks.py  test_setup.sh
.github/workflows/: branch-protection.yml  ci.yml  claude.yml  develop-branch.yml  docker-build.yml  frontend.yml  install-test.yml  pr-checks.yml  test-docker.yml
config/: README.md  docker-compose.yml  validate-config.py
docs/: CONFIGURATION_CHANGES.md  CONFIG_SETUP_GUIDE.md  DOCKER_TESTING.md  DOWNLOAD_QUEUE.md  FRONTEND.md  GITHUB_WORKFLOWS.md  POETRY_SETUP.md  README.md  SERVE.md  SETUP_README.md  SLDL_DOCKER_COMMAND.md  WISHLIST_SCHEDULING.md  docker-testing.md
docs/superpowers/plans/: 2026-04-27-phase-1-backend-foundations.md  2026-04-30-phase-2-web-ui.md
docs/superpowers/specs/: 2026-04-27-frontend-music-manager-design.md  2026-04-30-phase-2-web-ui-design.md
examples/: README.md  sldl.conf.example  toolcrate.conf.example
scripts/: build_frontend.py  cron_wrapper.sh  docker-health-check.sh  docker-test-helper.sh  docker-test-runner.sh  install.sh  post-process-opus.py  run_tests.sh  setup-branch-protection.sh  setup-dev.sh  test-in-docker.sh  toolcrate-sldl  toolcrate_wrapper  verify-docker-setup.sh  verify-tool-integration.sh
src/toolcrate/: __init__.py
src/toolcrate/cli/: __init__.py  binary_manager.py  main.py  mdl.py  migrate.py  queue.py  schedule.py  serve.py  wishlist_run.py  wrappers.py
src/toolcrate/config/: __init__.py  manager.py
src/toolcrate/core/: __init__.py  config.py  downloads.py  events.py  exceptions.py  jobs.py  reconcile.py  sldl_adapter.py  source_lists.py  spotify.py  sync.py  worker_handlers.py
src/toolcrate/db/: __init__.py  models.py  session.py
src/toolcrate/db/alembic/: env.py
src/toolcrate/db/alembic/versions/: 0001_initial.py
src/toolcrate/downloaders/: __init__.py  audio.py
src/toolcrate/queue/: __init__.py  processor.py
src/toolcrate/scripts/: __init__.py  cron_manager.py  process_wishlist.py
src/toolcrate/web/: __init__.py  app.py  deps.py  middleware.py  problem.py
src/toolcrate/web/frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/toolcrate/web/frontend/__tests__/: AddListDialog.test.tsx  Jobs.test.tsx  TrackTable.test.tsx  client.test.ts  sse.test.ts
src/toolcrate/web/frontend/scripts/: gen-api.ts
src/toolcrate/web/frontend/src/: App.tsx  router.tsx
src/toolcrate/web/frontend/src/api/: client.ts  keys.ts  resources.ts  sse.ts  types.ts
src/toolcrate/web/frontend/src/components/: AddListDialog.tsx  JobLogPane.tsx  Layout.tsx  ListMasterTable.tsx  LiveBadge.tsx  Sidebar.tsx  StatusPill.tsx  TrackTable.tsx
src/toolcrate/web/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  table.tsx  tabs.tsx
src/toolcrate/web/frontend/src/hooks/: useJobs.ts  useLists.ts  usePreview.ts  useSseInvalidation.ts  useTracks.ts
src/toolcrate/web/frontend/src/lib/: format.ts
src/toolcrate/web/frontend/src/pages/: Dashboard.tsx  Jobs.tsx  ListDetail.tsx  SpotifyLists.tsx
src/toolcrate/web/frontend/src/styles/: globals.css
src/toolcrate/web/frontend/src/test/: msw-handlers.ts  setup.ts
src/toolcrate/web/routers/: auth_app.py  events.py  health.py  jobs.py  lists.py  tracks.py
src/toolcrate/web/schemas/: __init__.py  common.py  jobs.py  lists.py  tracks.py
src/toolcrate/wishlist/: __init__.py  post_processor.py  processor.py
tests/: INTEGRATION_TEST_COVERAGE.md  README.md  __init__.py  conftest.py  run_tests.py  test_config_generator.sh  test_config_mount_detection.py  test_docker_setup.py  test_integration.py  test_main_cli.py  test_package.py  test_real_commands.sh  test_real_network.sh  test_runner.py  test_runner_unified.py  test_setup.sh  test_setup_build.py  test_setup_enhanced.sh  test_shazam_tool.py  test_sldl_docker.py  test_tool_integrations.py  test_wrappers.py
tests/fixtures/: sldl_index_sample.csv  sldl_stdout_sample.txt  spotify_playlist.json
tests/integration/: README_REAL_NETWORK_TESTS.md  __init__.py  test_alembic_migration.py  test_cli_integration.py  test_cron_management.py  test_events_sse.py  test_health_api.py  test_jobs_api.py  test_lists_api.py  test_migrate_cli.py  test_network_config.py  test_real_network_downloads.py  test_real_world_workflows.py  test_serve_cli.py  test_tracks_api.py
tests/unit/: __init__.py  test_binary_manager.py  test_cli.py  test_wrappers.py
tests/unit/core/: test_config.py  test_db_session.py  test_downloads.py  test_events.py  test_jobs.py  test_models.py  test_reconcile.py  test_sldl_adapter.py  test_source_lists.py  test_spotify_client.py  test_sync.py  test_worker_handlers.py
tests/unit/web/: test_auth.py  test_middleware.py
tests/web/: test_app_static.py  test_auth_cookie.py  test_dev_cors.py  test_lists_preview.py
