[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolcrate"
version = "0.1.0"
description = "A unified tool suite for music management and processing"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "click>=8.1.3",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
shazam = [
    "shazamio",
    "pydub",
    "yt-dlp",
    "ShazamApi",
]

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
]

[project.scripts]
toolcrate = "toolcrate.cli.main:main"
slsk-tool = "toolcrate.cli.wrappers:run_slsk"
shazam-tool = "toolcrate.cli.wrappers:run_shazam"
mdl-tool = "toolcrate.cli.wrappers:run_mdl"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["toolcrate*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
