[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolcrate"
version = "0.1.0"
description = "A unified tool suite for music management and processing"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "GPL-3.0" }
authors = [
    {name = "User", email = "user@example.com"},
]
keywords = ["music", "soulseek", "shazam", "download", "batch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "click>=8.1.3",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "yt-dlp>=2024.1.1",
]

[project.optional-dependencies]
shazam = [
    "shazamio",
    "pydub",
    "ShazamApi",
]

[project.urls]
Homepage = "https://github.com/discolotus/toolcrate"
Repository = "https://github.com/discolotus/toolcrate"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "setuptools>=80.9.0",
]

[project.scripts]
toolcrate = "toolcrate.cli.main:main"
slsk-tool = "toolcrate.cli.wrappers:run_slsk"
shazam-tool = "toolcrate.cli.wrappers:run_shazam"
mdl-tool = "toolcrate.cli.wrappers:run_mdl"
toolcrate-identify-wishlist = "toolcrate.scripts.process_wishlist:main"
toolcrate-identify-djsets = "toolcrate.scripts.process_wishlist:main"

[tool.setuptools]
py-modules = []
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["toolcrate*"]

[tool.setuptools.package-data]
toolcrate = [
    "../config/*.yaml",
    "../config/*.yml",
    "../config/*.conf",
    "../config/README.md",
    "../docs/*.md",
]

# Testing configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/toolcrate",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Code formatting
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | src/slsk-batchdl
  | src/Shazam-Tool
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["src/slsk-batchdl/*", "src/Shazam-Tool/*"]

# Type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "src/slsk-batchdl/",
    "src/Shazam-Tool/",
    "build/",
    "dist/",
]

# Linting with Ruff
[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "src/slsk-batchdl",
    "src/Shazam-Tool",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise-without-from-inside-except (pre-existing throughout codebase)
    "C901",  # too complex
    "E722",  # bare-except (pre-existing throughout codebase)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert statements in tests
"src/**/__init__.py" = ["F401"]  # Re-exports in __init__ files
